--- a/work/styles/global.css
+++ b/work/styles/global.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@font-face {
+  font-family: "METRIK";
+  src: url("../styles/Metrik.otf");
+}
+@font-face {
+  font-family: "CIRCULAR";
+  src: url("../styles/Circular.otf");
+}
+
+
 [data-collapsible="true"].bg-white + [data-collapsible="true"].bg-white {
   @apply pt-0 md:pt-0;
 }
